src/ui/readarr_ui/history/snapshots/managarr__ui__readarr_ui__history__history_ui_tests__tests__snapshot_tests__history_second_item_selected_History.snap
---
source: src/ui/readarr_ui/history/history_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Source Title                                                                   Event Type                    Quality              Date                            
   First Source Title                                                             grabbed                       EPUB                 2023-05-20 21:29:16 UTC         
=> Second Source Title                                                            downloadFailed                MOBI                 2024-08-14 09:03:47 UTC
