src/ui/readarr_ui/history/snapshots/managarr__ui__readarr_ui__history__history_ui_tests__tests__snapshot_tests__history_tab_HistoryItemDetails.snap
---
source: src/ui/readarr_ui/history/history_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Source Title ▼                                                                 Event Type                    Quality              Date                            
=> Test Source Title                                                              grabbed                       EPUB                 2023-05-20 21:29:16 UTC         
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                         ╭───────────────────────────────────  Details  ───────────────────────────────────╮                                         
                                         │Source Title: Test Source Title                                                  │                                         
                                         │Event Type: grabbed                                                              │                                         
                                         │Quality: EPUB                                                                    │                                         
                                         │Date: 2023-05-20 21:29:16 UTC                                                    │                                         
                                         │Indexer:                                                                         │                                         
                                         │NZB Info URL:                                                                    │                                         
                                         │Release Group:                                                                   │                                         
                                         │Age: 0 days                                                                      │                                         
                                         │Published Date: 1970-01-01 00:00:00 UTC                                          │                                         
                                         │Download Client:                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         ╰─────────────────────────────────────────────────────────────────────────────────╯
